# my-second

./: .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  docker-compose.yml  ideas.pgn  ideas_GothamChess_vs_im_eric_rosen.pgn  pyproject.toml
.claude/: settings.local.json
data/: cache.sqlite-shm  cache.sqlite-wal  jobs.sqlite
scripts/: build_web.sh  deploy.sh  integration_test.py  migrate_jobs_to_pg.py  run_demo.sh  run_demo_players.sh  run_web.sh  setup_macos.sh
src/mysecond/: __init__.py  bot_trainer.py  cache.py  cli.py  engine.py  eval_cache.py  explorer.py  export.py  fetcher.py  game_phases.py  habits.py  models.py  repertoire.py  repertoire_extract.py  score.py  search.py  strategise.py
tests/: test_cache.py  test_engine.py  test_export.py  test_fetcher.py  test_jobs.py  test_repertoire.py  test_search.py  test_server_routes.py  test_sse.py  test_worker.py
web/: auth.py  backup.py  bots.py  featured_players.py  gunicorn.conf.py  habits_parser.py  jobs.py  maia_engine.py  pgn_parser.py  repertoire_parser.py  runner.py  server.py  worker.py
web/novelty-browser/: index.html  package-lock.json  package.json  vite.config.js
web/static/: admin.css  admin.js  app.js  dashboard.css  dashboard.js  error.html  landing.css  robots.txt
web/templates/: account.html  admin.html  base.html  bot_practice.html  bots.html  dashboard.html  fetch.html  game_analysis.html  habits.html  habits_browser.html  habits_practice.html  import.html  index.html  job.html  landing.html  login.html  novelty_browser.html  player_profile.html  players.html  pricing.html  (+5 more)
(+18 files in other folders)
